--- a/package.json
+++ b/package.json
@@ -10,10 +10,25 @@
     "test": "jest"
   },
   "dependencies": {
-    "react": "19.1.0",
-    "react-native": "0.81.4",
+    "@expo/vector-icons": "^15.0.2",
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-firebase/app": "^23.3.1",
+    "@react-native-firebase/auth": "^23.3.1",
+    "@react-native-picker/picker": "^2.11.2",
     "@react-native/new-app-screen": "0.81.4",
-    "react-native-safe-area-context": "^5.5.2"
+    "@react-navigation/native": "^7.1.17",
+    "@react-navigation/stack": "^7.4.8",
+    "i18next": "^25.5.2",
+    "lottie-react-native": "^7.3.4",
+    "react": "19.1.0",
+    "react-i18next": "^15.7.3",
+    "react-native": "0.81.4",
+    "react-native-gesture-handler": "^2.28.0",
+    "react-native-gifted-chat": "^2.8.1",
+    "react-native-localize": "^3.5.2",
+    "react-native-safe-area-context": "^5.6.1",
+    "react-native-screens": "^4.16.0",
+    "react-native-vector-icons": "^10.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -28,6 +43,8 @@
     "@react-native/typescript-config": "0.81.4",
     "@types/jest": "^29.5.13",
     "@types/react": "^19.1.0",
+    "@types/react-i18next": "^7.8.3",
+    "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^19.1.0",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
