--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
     "test": "jest"
   },
   "dependencies": {
-    "@expo/vector-icons": "^15.0.2",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-firebase/app": "^23.3.1",
     "@react-native-firebase/auth": "^23.3.1",
     "@react-native-picker/picker": "^2.11.2",
     "@react-native/new-app-screen": "0.81.4",
     "@react-navigation/native": "^7.1.17",
+    "@react-navigation/native-stack": "^7.3.26",
     "@react-navigation/stack": "^7.4.8",
     "i18next": "^25.5.2",
     "lottie-react-native": "^7.3.4",
